--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="navbar">
             <div class="logo">
                 <a href="index.html">
-                <img src="images/logo.png" width="125px"></a>
+                <img src="logo.png" width="125px"></a>
             </div>
             <nav>
                 <ul id="MenuItems">
@@ -31,8 +31,8 @@
                 </ul>
             </nav>
             <a href="Cart.html">
-            <img src="images/cart.png" width="30px"  height="30px"></a>
-            <img src="images/menu.png" class="menu-icon" onclick="menutoggle()">
+            <img src="cart.png" width="30px"  height="30px"></a>
+            <img src="menu.png" class="menu-icon" onclick="menutoggle()">
         </div>
         <div class="row">
             <div class="col-2">
@@ -42,7 +42,7 @@
                          <a href="" class="btn">Explore Now &#8594;</a>
             </div>
             <div class="col-2">
-                <img src="images/image1.png" >
+                <img src="image1.png" >
             </div>
         </div>
     </div>
@@ -52,13 +52,13 @@
        <div class="small-container">
        <div class="row">
            <div class="col-3">
-               <img src="images/category-1.jpg" >
+               <img src="category-1.jpg" >
            </div>
            <div class="col-3">
-            <img src="images/category-2.jpg" >
+            <img src="category-2.jpg" >
             </div>
            <div class="col-3">
-            <img src="images/category-3.jpg" >
+            <img src="category-3.jpg" >
            </div>
        </div>
    </div>
@@ -71,7 +71,7 @@
        </h2>
        <div class="row">
            <div class="col-4">
-               <a href="product details.html"><img src="images/product-1.jpg" ></a>
+               <a href="product details.html"><img src="product-1.jpg" ></a>
                <a href="product details.html"><h4>
                    Red Printed T-Shirt
                </h4></a>
@@ -85,7 +85,7 @@
                <p>$50.00</p>
            </div>
            <div class="col-4">
-            <img class="show-item-image" src="images/product-2.jpg" >
+            <img class="show-item-image" src="product-2.jpg" >
             <h4 class="show-item-title">
                 Spark Shoes
             </h4>
@@ -99,7 +99,7 @@
             <p class="show-item-price">$90.00</p>
         </div>
         <div class="col-4">
-            <img src="images/product-3.jpg" >
+            <img src="product-3.jpg" >
             <h4>
                 Jockey Gray Track
             </h4>
@@ -113,7 +113,7 @@
             <p>$60.00</p>
         </div>
         <div class="col-4">
-            <img src="images/product-4.jpg" >
+            <img src="product-4.jpg" >
             <h4>
                 Puma T-Shirt
             </h4>
@@ -132,7 +132,7 @@
     </h2>
     <div class="row">
         <div class="col-4">
-            <img src="images/product-5.jpg" >
+            <img src="product-5.jpg" >
             <h4>
                 Puma Shoes
             </h4>
@@ -146,7 +146,7 @@
             <p>$30.00</p>
         </div>
         <div class="col-4">
-         <img src="images/product-6.jpg" >
+         <img src="product-6.jpg" >
          <h4>
              Puma Sports T-Shirt
          </h4>
@@ -160,7 +160,7 @@
          <p>$20.00</p>
      </div>
      <div class="col-4">
-         <img src="images/product-7.jpg" >
+         <img src="product-7.jpg" >
          <h4>
             HRX Shocks
          </h4>
@@ -174,7 +174,7 @@
          <p>$10.00</p>
      </div>
      <div class="col-4">
-         <img src="images/product-8.jpg" >
+         <img src="product-8.jpg" >
          <h4>
              Fossil Digital Watch
          </h4>
@@ -188,7 +188,7 @@
          <p>$80.00</p>
      </div>
      <div class="col-4">
-        <img src="images/product-9.jpg" >
+        <img src="product-9.jpg" >
         <h4>
             Timex Watch
         </h4>
@@ -202,7 +202,7 @@
         <p>$10.00</p>
     </div>
     <div class="col-4">
-        <img src="images/product-10.jpg" >
+        <img src="product-10.jpg" >
         <h4>
             Black Spark Shoes
         </h4>
@@ -216,7 +216,7 @@
         <p>$80.00</p>
     </div>
     <div class="col-4">
-        <img src="images/product-11.jpg" >
+        <img src="product-11.jpg" >
         <h4>
             Loafer Shoes
         </h4>
@@ -230,7 +230,7 @@
         <p>$30.00</p>
     </div>
     <div class="col-4">
-        <img src="images/product-12.jpg" >
+        <img src="product-12.jpg" >
         <h4>
             Nike Track
         </h4>
@@ -250,7 +250,7 @@
     <div class="small-container">
         <div class="row">
             <div class="col-2">
-                <img src="images/exclusive.png" class="offer-img">
+                <img src="exclusive.png" class="offer-img">
 
             </div>
             <div class="col-2">
@@ -285,7 +285,7 @@
                     <i class="fa fa-star" ></i>
                     <i class="fa fa-star-o"></i>
                 </div>
-                <img src="images/user-1.png">
+                <img src="user-1.png">
                 <h3>
                     Selina
                 </h3>
@@ -303,7 +303,7 @@
                         <i class="fa fa-star" ></i>
                         <i class="fa fa-star-o"></i>
                     </div>
-                    <img src="images/user-2.png">
+                    <img src="user-2.png">
                     <h3>
                         Parker
                     </h3>
@@ -321,7 +321,7 @@
                             <i class="fa fa-star" ></i>
                             <i class="fa fa-star-o"></i>
                         </div>
-                        <img src="images/user-3.png">
+                        <img src="user-3.png">
                         <h3>
                             Angelina
                         </h3>
@@ -336,19 +336,19 @@
     <div class="small-container">
         <div class="row">
             <div class="col-5">
-                <img src="images/logo-coca-cola.png">
+                <img src="logo-coca-cola.png">
             </div>
             <div class="col-5">
-                <img src="images/logo-godrej.png">
+                <img src="logo-godrej.png">
             </div>
             <div class="col-5">
-                <img src="images/logo-paypal.png">
+                <img src="logo-paypal.png">
             </div>
             <div class="col-5">
-                <img src="images/logo-philips.png">
+                <img src="logo-philips.png">
             </div>
             <div class="col-5">
-                <img src="images/logo-oppo.png">
+                <img src="logo-oppo.png">
             </div>
         </div>
     </div>
@@ -364,12 +364,12 @@
                 </h3>
                 <p>Download App for Andriod and ios mobile phone.</p>
                 <div class="app-logo">
-                    <img src="images/play-store.png">
-                    <img src="images/app-store.png">
+                    <img src="play-store.png">
+                    <img src="app-store.png">
                 </div>
             </div>
             <div class="footer-col-2">
-                <img src="images/logo-white.png" alt="">
+                <img src="logo-white.png" alt="">
                 <p>Our Purpose Is To Sustainbly Make the Pleasure and Benefits of
                     sports Accessible to the Many.
                 </p>
