--- a/products.html
+++ b/products.html
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <a href="index.html"><img src="images/logo.png" width="125px"></a>
+                <a href="index.html"><img src="logo.png" width="125px"></a>
             </div>
             <nav>
                 <ul id="MenuItems">
@@ -29,9 +29,9 @@
                     <li><a href="account.html">Account</a></li>
                 </ul>
             </nav>
-            <a href="Cart.html"><img src="images/cart.png" width="30px"  height="30px">
+            <a href="Cart.html"><img src="cart.png" width="30px"  height="30px">
             </a>
-                <img src="images/menu.png" class="menu-icon" onclick="menutoggle()">
+                <img src="menu.png" class="menu-icon" onclick="menutoggle()">
         </div>
    
     </div>
@@ -50,7 +50,7 @@
 
        <div class="row">
            <div class="col-4">
-               <a href="product details.html"><img src="images/product-1.jpg" ></a>
+               <a href="product details.html"><img src="product-1.jpg" ></a>
                <a href="product details.html"><h4>
                    Red Printed T-Shirt
                </h4></a>
@@ -64,7 +64,7 @@
                <p>$50.00</p>
            </div>
            <div class="col-4">
-            <img src="images/product-2.jpg" >
+            <img src="product-2.jpg" >
             <h4>
                 Spark Shoes
             </h4>
@@ -78,7 +78,7 @@
             <p>$90.00</p>
         </div>
         <div class="col-4">
-            <img src="images/product-3.jpg" >
+            <img src="product-3.jpg" >
             <h4>
                 Jockey Gray Track
             </h4>
@@ -92,7 +92,7 @@
             <p>$60.00</p>
         </div>
         <div class="col-4">
-            <img src="images/product-4.jpg" >
+            <img src="product-4.jpg" >
             <h4>
                 Puma T-Shirt
             </h4>
@@ -108,7 +108,7 @@
        </div>
        <div class="row">
         <div class="col-4">
-            <img src="images/product-5.jpg" >
+            <img src="product-5.jpg" >
             <h4>
                Puma Shoes
             </h4>
@@ -122,7 +122,7 @@
             <p>$30.00</p>
         </div>
         <div class="col-4">
-         <img src="images/product-6.jpg" >
+         <img src="product-6.jpg" >
          <h4>
              Puma Sports T-Shirt
          </h4>
@@ -136,7 +136,7 @@
          <p>$20.00</p>
      </div>
      <div class="col-4">
-         <img src="images/product-7.jpg" >
+         <img src="product-7.jpg" >
          <h4>
              HRX Shocks
          </h4>
@@ -150,7 +150,7 @@
          <p>$10.00</p>
      </div>
      <div class="col-4">
-         <img src="images/product-8.jpg" >
+         <img src="product-8.jpg" >
          <h4>
              Fossil Digital Watch
          </h4>
@@ -164,7 +164,7 @@
          <p>$80.00</p>
      </div>
      <div class="col-4">
-        <img src="images/product-9.jpg" >
+        <img src="product-9.jpg" >
         <h4>
             Timex Watch
         </h4>
@@ -178,7 +178,7 @@
         <p>$10.00</p>
     </div>
     <div class="col-4">
-        <img src="images/product-10.jpg" >
+        <img src="product-10.jpg" >
         <h4>
             Black Spark Shoes
         </h4>
@@ -192,7 +192,7 @@
         <p>$80.00</p>
     </div>
     <div class="col-4">
-        <img src="images/product-11.jpg" >
+        <img src="product-11.jpg" >
         <h4>
            Loafer Shoes
         </h4>
@@ -206,7 +206,7 @@
         <p>$30.00</p>
     </div>
     <div class="col-4">
-        <img src="images/product-12.jpg" >
+        <img src="product-12.jpg" >
         <h4>
             Nike Track
         </h4>
@@ -241,12 +241,12 @@
                 </h3>
                 <p>Download App for Andriod and ios mobile phone.</p>
                 <div class="app-logo">
-                    <img src="images/play-store.png">
-                    <img src="images/app-store.png">
+                    <img src="play-store.png">
+                    <img src="app-store.png">
                 </div>
             </div>
             <div class="footer-col-2">
-                <img src="images/logo-white.png" alt="">
+                <img src="logo-white.png" alt="">
                 <p>Our Purpose Is To Sustainbly Make the Pleasure and Benefits of
                     sports Accessible to the Many.
                 </p>
