--- a/account.html
+++ b/account.html
@@ -18,7 +18,8 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <img src="images/logo.png" width="125px">
+                <a href="index.html"><img src="logo.png" width="125px"></a>
+                
             </div>
             <nav>
                 <ul id="MenuItems">
@@ -29,9 +30,9 @@
                     <li><a href="account.html">Account</a></li>
                 </ul>
             </nav>
-            <a href="Cart.html"><img src="images/cart.png" width="30px"  height="30px">
+            <a href="Cart.html"><img src="cart.png" width="30px"  height="30px">
             </a>
-            <img src="images/menu.png" class="menu-icon" onclick="menutoggle()">
+            <img src="menu.png" class="menu-icon" onclick="menutoggle()">
         </div>
    
     </div>
@@ -41,7 +42,7 @@
     <div class="container">
         <div class="row">
             <div class="col-2">
-                <img src="images/image1.png" width="100%">
+                <img src="image1.png" width="100%">
             </div>
             <div class="col-2">
                 <div class="form-container">
@@ -78,12 +79,12 @@
                 </h3>
                 <p>Download App for Andriod and ios mobile phone.</p>
                 <div class="app-logo">
-                    <img src="images/play-store.png">
-                    <img src="images/app-store.png">
+                    <img src="play-store.png">
+                    <img src="app-store.png">
                 </div>
             </div>
             <div class="footer-col-2">
-                <img src="images/logo-white.png" alt="">
+                <img src="logo-white.png" alt="">
                 <p>Our Purpose Is To Sustainbly Make the Pleasure and Benefits of
                     sports Accessible to the Many.
                 </p>
