--- a/product details.html
+++ b/product details.html
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <img src="images/logo.png" width="125px">
+                <a href="index.html><img src="logo.png" width="125px"></a>
             </div>
             <nav>
                 <ul id="MenuItems">
@@ -29,8 +29,8 @@
                     <li><a href="account.html">Account</a></li>
                 </ul>
             </nav>
-            <img src="images/cart.png" width="30px"  height="30px">
-            <img src="images/menu.png" class="menu-icon" onclick="menutoggle()">
+            <a href=Cart.html><img src="cart.png" width="30px"  height="30px"></a>
+            <img src="menu.png" class="menu-icon" onclick="menutoggle()">
         </div>
    
     </div>
@@ -39,13 +39,13 @@
 <div class="small-container single-product">
     <div class="row">
         <div class="col-2">
-            <img src="images/gallery-1.jpg" width="100%" id="ProductImg" >
+            <img src="gallery-1.jpg" width="100%" id="ProductImg" >
 
         <div class="small-img-row">
-            <div class="small-img-col"><img src="images/gallery-1.jpg" width="100%" class="small-img"></div>
-            <div class="small-img-col"><img src="images/gallery-2.jpg" width="100%" class="small-img"></div>
-            <div class="small-img-col"><img src="images/gallery-3.jpg" width="100%" class="small-img"></div>
-            <div class="small-img-col"><img src="images/gallery-4.jpg" width="100%" class="small-img"></div>
+            <div class="small-img-col"><img src="gallery-1.jpg" width="100%" class="small-img"></div>
+            <div class="small-img-col"><img src="gallery-2.jpg" width="100%" class="small-img"></div>
+            <div class="small-img-col"><img src="gallery-3.jpg" width="100%" class="small-img"></div>
+            <div class="small-img-col"><img src="gallery-4.jpg" width="100%" class="small-img"></div>
         </div>
         </div>
         <div class="col-2">
@@ -101,7 +101,7 @@
   <div class="row">
  
      <div class="col-4">
-        <img src="images/product-9.jpg" >
+        <img src="product-9.jpg" >
         <h4>
             Timex Watch
         </h4>
@@ -115,7 +115,7 @@
         <p>$10.00</p>
     </div>
     <div class="col-4">
-        <img src="images/product-10.jpg" >
+        <img src="product-10.jpg" >
         <h4>
             Black Spark Shoes
         </h4>
@@ -129,7 +129,7 @@
         <p>$80.00</p>
     </div>
     <div class="col-4">
-        <img src="images/product-11.jpg" >
+        <img src="product-11.jpg" >
         <h4>
             Loafer Shoes
         </h4>
@@ -143,7 +143,7 @@
         <p>$30.00</p>
     </div>
     <div class="col-4">
-        <img src="images/product-12.jpg" >
+        <img src="product-12.jpg" >
         <h4>
             Nike Track
         </h4>
@@ -172,12 +172,12 @@
                 </h3>
                 <p>Download App for Andriod and ios mobile phone.</p>
                 <div class="app-logo">
-                    <img src="images/play-store.png">
-                    <img src="images/app-store.png">
+                    <img src="play-store.png">
+                    <img src="app-store.png">
                 </div>
             </div>
             <div class="footer-col-2">
-                <img src="images/logo-white.png" alt="">
+                <img src="logo-white.png" alt="">
                 <p>Our Purpose Is To Sustainbly Make the Pleasure and Benefits of
                     sports Accessible to the Many.
                 </p>
