--- a/Cart.html
+++ b/Cart.html
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <img src="images/logo.png" width="125px">
+                <img src="logo.png" width="125px">
             </div>
             <nav>
                 <ul id="MenuItems">
@@ -29,8 +29,8 @@
                     <li><a href="account.html">Account</a></li>
                 </ul>
             </nav>
-            <img src="images/cart.png" width="30px"  height="30px">
-            <img src="images/menu.png" class="menu-icon" onclick="menutoggle()">
+            <img src="cart.png" width="30px"  height="30px">
+            <img src="menu.png" class="menu-icon" onclick="menutoggle()">
         </div>
     </div>
 
@@ -45,7 +45,7 @@
             <tr>
                 <td>
                 <div class="cart-info">
-                    <img src="images/buy-1.jpg">
+                    <img src="buy-1.jpg">
                    <div>
                        <p>Red Printed Tshirt</p>
                        <small>
@@ -61,7 +61,7 @@
             <tr>
                 <td>
                 <div class="cart-info">
-                    <img src="images/buy-2.jpg">
+                    <img src="buy-2.jpg">
                    <div>
                        <p>Spark Shoes</p>
                        <small>
@@ -77,7 +77,7 @@
             <tr>
                 <td>
                 <div class="cart-info">
-                    <img src="images/buy-3.jpg">
+                    <img src="buy-3.jpg">
                    <div>
                        <p>Nike Track</p>
                        <small>
@@ -119,12 +119,12 @@
                 </h3>
                 <p>Download App for Andriod and ios mobile phone.</p>
                 <div class="app-logo">
-                    <img src="images/play-store.png">
-                    <img src="images/app-store.png">
+                    <img src="play-store.png">
+                    <img src="app-store.png">
                 </div>
             </div>
             <div class="footer-col-2">
-                <img src="images/logo-white.png" alt="">
+                <img src="logo-white.png" alt="">
                 <p>Our Purpose Is To Sustainbly Make the Pleasure and Benefits of
                     sports Accessible to the Many.
                 </p>
